Updating AboutMe and pushing updates to future post

--- a/_posts/2024/2024-02-05-htb-tier-3.md
+++ b/_posts/2024/2024-02-05-htb-tier-3.md
@@ -8,9 +8,23 @@ image:
     path: /assets/images/appsec.jpg
 ---
 
+<style>
+  /*This is code to make the dropdown menu a little more aesthetically pleasing*/
+  @keyframes details-show {
+  from {
+    opacity:0;
+    transform: var(--details-translate, translateY(-0.5em));
+  }
+}
+details[open] > *:not(summary) {
+  animation: details-show 150ms ease-in-out;
+}
+
+</style>
+
 ## Introduction
 
-Late in 2023, Hack The Box announced a new training path along their Academy platform which accompanied an upcoming new certification they plan on releasing later in 2024. This was the first of their certifications which included **Tier 3** module content; up until now content aligned to their certifications (the CDSA, CBBH, and CPTS) all exclusively engaged **Tier 2** material.
+Late in 2023, Hack The Box announced a new training path along their Academy platform which is planned to align to their upcoming CWEE certification later in 2024. This was the first of their certifications which included **Tier 3** module content; up until now content aligned to their certifications (the CDSA, CBBH, and CPTS) all exclusively engaged **Tier 2** material.
 
 <center>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">New level unlocked 🔓 <br>Introducing the Senior Web Penetration Tester job role path on <a href="https://twitter.com/hashtag/HTB?src=hash&amp;ref_src=twsrc%5Etfw">#HTB</a> Academy! 15 modules will walk you through identifying advanced and hard-to-find <a href="https://twitter.com/hashtag/web?src=hash&amp;ref_src=twsrc%5Etfw">#web</a> vulnerabilities to take your expertise to the next level.<br><br>⭐️ You can now access the path with the new… <a href="https://t.co/7n3HRE5PWR">pic.twitter.com/7n3HRE5PWR</a></p>&mdash; Hack The Box (@hackthebox_eu) <a href="https://twitter.com/hackthebox_eu/status/1735706734704886220?ref_src=twsrc%5Etfw">December 15, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -34,19 +48,73 @@ Implicitly, the release of the path was meant to suggest that this training woul
 * Advanced Deserialization Attacks
 * Parameter Logic Bugs
 
+This blog post is a review and summary of the Tier 3 training path that aligns to the upcoming CWEE certification. It is not a walkthrough of the material, nor does it speak to the answers for each of the modules' questions and their respective "Skills Assessments". I do highlight fixes to administrative issues I encountered throughout, as I believe these are not deliberately built into the respective lesson objectives and do not otherwise detract from the learning experience.
+
 ## Injection Attacks
+
+This module is very quick to complete. Unlike the Tier 2 **Command Injections** module, which covers injection testing methodologies more broadly, **Injection Attacks** more narrowly focuses on three technologies and how they specifically can lead to vulnerabilities in an application. While this deepens your understanding of the attacks against them specifically, I think that this module is erroneously titled, focusing on XPath and LDAP Injections more particularly and bolting-on attacks on PDF-generators at the end.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-injection-attacks.md %}
+</details>
+</div>
 
 ## Introduction to NoSQL Injection
 
+I thought this module was pretty cool, being familiar to the idea of non-relational databases but without having extensively tested against them. To that end, this module was filled with some pretty neat content that was easy to follow along with but nuanced enough to appreciate the technical complexity. My only complaint here - which is fairly consistent with the Academy at-large - is that the tools they provide/suggest aren't always intuitive or helpful; however, there's plenty of open source alternatives available that I engaged which made this module altogether a more pleasant experience.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-nosql.md %}
+</details>
+</div>
+
 ## Attacking Authentication Mechanisms
+
+This module builds off of what is learned in the **Broken Authentication** module. However, where **Broken Authentication** focuses on basic attacks more generally (e.g. brute forcing, password inference, etc.), this module more narrowly examines technical vulnerabilities present in particular authentication mechanisms. Namely: JWT, OAuth, and SAML-supported SSO. I thought this module was pretty good, however the exercises didn't always help with solidfying comprehension.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-atk-authentication.md %}
+</details>
+</div>
 
 ## Advanced XSS and CSRF Exploitation
 
+This module was both one of the most rewarding along the path and the most frustrating. It's unique in providing some supporting architectural elements (i.e. an exploit & exfiltration server); these elements generally help with streamlining the learning experience - allowing users who don't possess more expensive licensed software like **Burp Suite Pro** access to the training. However, these learning aids come with some inconsistent application and hiccups which can be really frustrating. More than once I found myself battling the architecture vs. just engaging the problem; this is something I think is bound to happen when instruction isn't transparent about where/how victim users are artificially being simulated.
+
+However, once you get past that the details and exercises that accompany the training is really great. There's a lot of practical application to be had all throughout the module, which affords some good opportunities to really sink your teeth into vulnerability that typically lacks nuance in its surface-level understanding; you go well beyond simply passing `<script>alert(1);</script>` into form fields.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-advanced-xss.md %}
+</details>
+</div>
+
 ## HTTPs/TLS Attacks
 
-#### Introduction to HTTPs/TLs
+Unlike a lot of other content/training offered by Hack The Box, this module felt quite "academic". A lot of the vulnerabilities, exploits, and tools you engage with in this module aren't directly performed; most of the time, you're reading about a particular vulnerability or observing its effects in a provided PCAP file. On occasion you're given an exercise that has you perform the attacks described, with the heavy lifting performed by just a couple of tools introduced: **padbuster** and **TLS-Breaker**. The module shies away from getting into the math and proofs that undergird the research revealing the weaknesses in the cryptographic attacks, opting instead to keep discussions at a high-level in observing protocol exchanges. Because of this, I think the module's author(s) may have been hamstrung in what they could showcase. Overall however, the descriptions of what's transpiring are excellently laid out for the lay-person, with those few exercises that you do perform the attacks being excellent.
 
-This module starts pretty simple and can be completed quite quickly. You're introduced to the concept of certificates, certificate authorities, and using **OpenSSL** early on. From there, the training segways to describing different versions of the TLS protocol and using **Wireshark** to examine some small PCAP files for details about the handshake. Overall, this portion of the module should feel like a brief catch-up for those who have never been formally taught about these matters, but executing the tasks presented is trivial.
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-https-tls.md %}
+</details>
+</div>
 
-#### Padding Oracle Attacks
+## Abusing HTTP Misconfigurations
+
+This was a great module along the **Senior Web Penetration Tester**.
+
+
 
