Updates to blog drafts

--- a/_posts/2024/2024-02-05-htb-tier-3.md
+++ b/_posts/2024/2024-02-05-htb-tier-3.md
@@ -114,7 +114,16 @@ Unlike a lot of other content/training offered by Hack The Box, this module felt
 
 ## Abusing HTTP Misconfigurations
 
-This was a great module along the **Senior Web Penetration Tester**.
+This was a great module along the **Senior Web Penetration Tester**. It thoroughly covered **web cache poisoning**, **host header attacks**, and **session puzzling**, all of which were really interesting to read-up on and learn about. The section questions presented a lot of variation and hands-on work to better understand the vulnerabilities, but also doesn't shy away from providing thorough briefs on the underlying technologies that can be the source for these exploitable vulnerabilities. Overall, this was one of the more enjoyable/worthwhile modules of the path and is appropriate at Tier 3.
 
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-abusing-http.md %}
+</details>
+</div>
+
+## HTTP Attacks
 
 
