Finished HTTP Attacks

--- a/_posts/2024/2024-02-05-htb-tier-3.md
+++ b/_posts/2024/2024-02-05-htb-tier-3.md
@@ -126,4 +126,12 @@ This was a great module along the **Senior Web Penetration Tester**. It thorough
 
 ## HTTP Attacks
 
+After a small break in my training schedule, this was a great module to return back in with. Though named "HTTP Attacks", it really was focused on 2 different kinds of vulnerabilities: CRLF injection as well as **Content-Length** and/or **Transfer-Encoding** tampering. Despite having a third category ("HTTP/2 Downgrading"), in practice it really felt derivative of the Request Smuggling portion of the module, which exhaustively showed how tampering with the **Content-Length** and/or **Transfer-Encoding** headers could lead to all kinds of mischief. Despite that, the training was still very good and appropriate to the Tier it aligns with. The particularly challenging subsections included **HTTP Response Splitting** and **TE.CL**, both of which had exercises that very creatively innovated on the concepts their respective material introduced.
 
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-http-attacks.md %}
+</details>
+</div>
