Updates to htb tier 3 post

--- a/_posts/2024/2024-02-05-htb-tier-3.md
+++ b/_posts/2024/2024-02-05-htb-tier-3.md
@@ -135,3 +135,27 @@ After a small break in my training schedule, this was a great module to return b
 {% include_relative helpers/dropdown-http-attacks.md %}
 </details>
 </div>
+
+## Blind SQL Injection
+
+If anyone is familiar with boolean-based and/or time-based SQLi, then this module should be relatively trivial. While the module does introduce some neat python scripts that can be tailored for various encounters, I'd argue that functionally the material is just an alternative to using SQLmap to attain the same outcomes (albeit with much greater granularity of control and stripped down in its capabilities). There is also a brief introduction to working with **Microsoft SQL** (MSSQL), including some elements of leveraging privileged commands to achieve RCE. Overall however, this module didn't feel quite up to the level of Tier 3 training as some of the other modules along the **Senior Web Penetration Tester** path (and I'd contend this could reasonably be bumped down to a Tier 2 module). Overall, the module isn't lacking in the quality of its training or its exercises, but the material covered didn't feel sufficiently "advanced" enough as to warrant its price-point.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-blind-sql.md %}
+</details>
+</div>
+
+## Intro to Whitebox Pentesting
+
+This module was by far my favorite of the bunch (quite possibly because it so closely resembled my actual day-to-day). I consistently was learning new content across each of the sections, which was quite refreshing. Moreover, the Skills Assessment was phenomenal in being so open-ended in its approach; engaging it brought forward so many different ideas in trying to make it work and learning about **NodeJS** more generally. Because of how the module is structured, I ended-up putting together 3-4 exploit solutions that worked against my localized server, but only 1 that worked against the host; in the process of doing so, it felt really nice to exercise some creativity in how to go about engaging the problem, and it felt nice to apply lessons from elsewhere in iterating those approaches. For example, one of the problems the module grapples with is data extraction (suggesting either hijacking the response body, the error message body, or inferring the content via time-based blind attacks) - in the process of going about the module, I worked on applying a different method altogether: out-of-band messages, encoding responses into outbound requests (which worked locally, but failed in the exercise). Altogether, this module took longer than others and - in my opinion - was one of the most enjoyable.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/intro-to-whitebox.md %}
+</details>
+</div>
