--- a/_posts/2024/2024-02-05-htb-tier-3.md
+++ b/_posts/2024/2024-02-05-htb-tier-3.md
@@ -24,13 +24,13 @@ details[open] > *:not(summary) {
 
 ## Introduction
 
-Late in 2023, Hack The Box announced a new training path along their Academy platform which is planned to align to their upcoming CWEE certification later in 2024. This was the first of their certifications which included **Tier 3** module content; up until now content aligned to their certifications (the CDSA, CBBH, and CPTS) all exclusively engaged **Tier 2** material.
+Late in 2023, Hack The Box announced new Senior Web Penetration Tester training path along their Academy platform which aligns to their Certified Web Exploitation Expert (CWEE) certification. The CWEE - released earlier in 2024 - is the first of their certifications which included **Tier 3** module content; up until now content aligned to their certifications (the CDSA, CBBH, and CPTS) all exclusively engaged **Tier 2** material.
 
 <center>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">New level unlocked 🔓 <br>Introducing the Senior Web Penetration Tester job role path on <a href="https://twitter.com/hashtag/HTB?src=hash&amp;ref_src=twsrc%5Etfw">#HTB</a> Academy! 15 modules will walk you through identifying advanced and hard-to-find <a href="https://twitter.com/hashtag/web?src=hash&amp;ref_src=twsrc%5Etfw">#web</a> vulnerabilities to take your expertise to the next level.<br><br>⭐️ You can now access the path with the new… <a href="https://t.co/7n3HRE5PWR">pic.twitter.com/7n3HRE5PWR</a></p>&mdash; Hack The Box (@hackthebox_eu) <a href="https://twitter.com/hackthebox_eu/status/1735706734704886220?ref_src=twsrc%5Etfw">December 15, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </center>
 
-Implicitly, the release of the path was meant to suggest that this training would be more challenging and I was eager to see how. At-a-glance, the path was composed of the following modules:
+Implicitly, the release of the path was meant to suggest that this training would be more challenging and I was eager to see how. At-a-glance, the path is composed of the following modules:
 
 * Injection Attacks
 * Introduction to NoSQL Injection
@@ -48,7 +48,7 @@ Implicitly, the release of the path was meant to suggest that this training woul
 * Advanced Deserialization Attacks
 * Parameter Logic Bugs
 
-This blog post is a review and summary of the Tier 3 training path that aligns to the upcoming CWEE certification. It is not a walkthrough of the material, nor does it speak to the answers for each of the modules' questions and their respective "Skills Assessments". I do highlight fixes to administrative issues I encountered throughout, as I believe these are not deliberately built into the respective lesson objectives and do not otherwise detract from the learning experience.
+This blog post is a review and summary of the Tier 3 training path that aligns to the CWEE certification. It speaks to questions like "what do you learn?" and "what can I expect?". It is not a walkthrough of the material, nor does it speak to the answers for each of the modules' questions and their respective "Skills Assessments". In alignment with Hack The Box's terms of service, I encourage you to engage their Discord and Forums for aid in that regard. However, I do highlight fixes to administrative issues I encountered throughout, as I believe these are not deliberately built into the respective lesson objectives and do not otherwise detract from the learning experience. In addition to the brief summaries below, you can click on the dropdown menus to view my feedback on the individual modules' sections.
 
 ## Injection Attacks
 
@@ -90,7 +90,7 @@ This module builds off of what is learned in the **Broken Authentication** modul
 
 This module was both one of the most rewarding along the path and the most frustrating. It's unique in providing some supporting architectural elements (i.e. an exploit & exfiltration server); these elements generally help with streamlining the learning experience - allowing users who don't possess more expensive licensed software like **Burp Suite Pro** access to the training. However, these learning aids come with some inconsistent application and hiccups which can be really frustrating. More than once I found myself battling the architecture vs. just engaging the problem; this is something I think is bound to happen when instruction isn't transparent about where/how victim users are artificially being simulated.
 
-However, once you get past that the details and exercises that accompany the training is really great. There's a lot of practical application to be had all throughout the module, which affords some good opportunities to really sink your teeth into vulnerability that typically lacks nuance in its surface-level understanding; you go well beyond simply passing `<script>alert(1);</script>` into form fields.
+However, once you get past that the details and exercises that accompany the training are really great. There's a lot of practical application to be had all throughout the module, which affords some good opportunities to really sink your teeth into a kind of vulnerability that typically lacks nuance in its surface-level understanding; you go well beyond simply passing `<script>alert(1);</script>` into form fields.
 
 <hr>
 <div class="custom-dropdown">
@@ -102,7 +102,7 @@ However, once you get past that the details and exercises that accompany the tra
 
 ## HTTPs/TLS Attacks
 
-Unlike a lot of other content/training offered by Hack The Box, this module felt quite "academic". A lot of the vulnerabilities, exploits, and tools you engage with in this module aren't directly performed; most of the time, you're reading about a particular vulnerability or observing its effects in a provided PCAP file. On occasion you're given an exercise that has you perform the attacks described, with the heavy lifting performed by just a couple of tools introduced: **padbuster** and **TLS-Breaker**. The module shies away from getting into the math and proofs that undergird the research revealing the weaknesses in the cryptographic attacks, opting instead to keep discussions at a high-level in observing protocol exchanges. Because of this, I think the module's author(s) may have been hamstrung in what they could showcase. Overall however, the descriptions of what's transpiring are excellently laid out for the lay-person, with those few exercises that you do perform the attacks being excellent.
+Unlike a lot of other content/training offered by Hack The Box, this module felt quite "academic". A lot of the vulnerabilities, exploits, and tools you engage with in this module aren't directly performed; most of the time, you're reading about a particular vulnerability or observing its effects in a provided PCAP file. On occasion you're given an exercise that has you perform the attacks described, with the heavy lifting performed by just a couple of tools introduced: **padbuster** and **TLS-Breaker**. The module shies away from getting into the math and proofs that undergird the research in the cryptographic attacks, opting instead to keep discussions at a high-level in observing protocol exchanges. Because of this, I think the module's author(s) may have been hamstrung in what they could showcase. Overall however, the descriptions of what's transpiring are excellently laid out for the lay-person, with those few exercises that you do perform the attacks being excellent.
 
 <hr>
 <div class="custom-dropdown">
@@ -114,7 +114,7 @@ Unlike a lot of other content/training offered by Hack The Box, this module felt
 
 ## Abusing HTTP Misconfigurations
 
-This was a great module along the **Senior Web Penetration Tester**. It thoroughly covered **web cache poisoning**, **host header attacks**, and **session puzzling**, all of which were really interesting to read-up on and learn about. The section questions presented a lot of variation and hands-on work to better understand the vulnerabilities, but also doesn't shy away from providing thorough briefs on the underlying technologies that can be the source for these exploitable vulnerabilities. Overall, this was one of the more enjoyable/worthwhile modules of the path and is appropriate at Tier 3.
+This was a great module along the **Senior Web Penetration Tester** path. It thoroughly covered **web cache poisoning**, **host header attacks**, and **session puzzling**, all of which were really interesting to read-up on and learn about. The section questions presented a lot of variation and hands-on work to better understand the vulnerabilities, but also doesn't shy away from providing thorough briefs on the underlying technologies that can be the source for these exploitable vulnerabilities. Overall, this was one of the more enjoyable/worthwhile modules of the path and is appropriate at Tier 3.
 
 <hr>
 <div class="custom-dropdown">
@@ -150,7 +150,9 @@ If anyone is familiar with boolean-based and/or time-based SQLi, then this modul
 
 ## Intro to Whitebox Pentesting
 
-This module was by far my favorite of the bunch (quite possibly because it so closely resembled my actual day-to-day). I consistently was learning new content across each of the sections, which was quite refreshing. Moreover, the Skills Assessment was phenomenal in being so open-ended in its approach; engaging it brought forward so many different ideas in trying to make it work and learning about **NodeJS** more generally. Because of how the module is structured, I ended-up putting together 3-4 exploit solutions that worked against my localized server, but only 1 that worked against the host; in the process of doing so, it felt really nice to exercise some creativity in how to go about engaging the problem, and it felt nice to apply lessons from elsewhere in iterating those approaches. For example, one of the problems the module grapples with is data extraction (suggesting either hijacking the response body, the error message body, or inferring the content via time-based blind attacks) - in the process of going about the module, I worked on applying a different method altogether: out-of-band messages, encoding responses into outbound requests (which worked locally, but failed in the exercise). Altogether, this module took longer than others and - in my opinion - was one of the most enjoyable.
+I'll admit, when I first started this module I was prepared for it to be a cake walk; after all, you're provided all of the source code (which doesn't change at all until the Skills Assessment), it uses the same framework (**NodeJS**), and the codebase itself is pretty small and intuitive. However, I ended up finding that this module was my favorite of all the modules leading up to it, since its exercises are so permissively open-ended in their applied solutions. Each subsection talks about a different way the same app could be exploited, focusing not just on the exploit, but the process of analysis that could lend to you arriving at discovering said exploit (the latter of which is arguably more important in a whitebox assessment). For each exercise, you're using the same NodeJS code that you can host as a localized server to test against before launching your complete exploit against the HackTheBox-hosted version of the same code.
+
+It felt really nice to exercise some creativity in how to go about engaging the problem, and it felt satisfying to apply lessons from other modules in iterating those approaches. For example, one of the problems the module grapples with is data extraction (suggesting either hijacking the response body, the error message body, or inferring the content via time-based blind attacks) - in the process of going about the module, I worked on applying a different method altogether: out-of-band messaging, encoding responses into outbound requests (which worked locally, but failed in the exercise due to dockerized connectivity constraints). Altogether, this module took longer than others and - in my opinion - was one of the most enjoyable.
 
 <hr>
 <div class="custom-dropdown">
@@ -159,3 +161,18 @@ This module was by far my favorite of the bunch (quite possibly because it so cl
 {% include_relative helpers/intro-to-whitebox.md %}
 </details>
 </div>
+
+## Modern Web Exploitation Techniques
+
+From the onset, this looked like a really long module, with 3 sections containing 5-6 subsections each. In actuality, most of the module's section are pretty quick/trivial to step through (I got hung-up on only one subsection related to **WebSockets**). Altogether, this module felt pretty lackluster in comparison to some of the others HTB has put together at the Tier 3 level. The one truly novel attack that's showcased is **DNS rebinding**, but its unfortunate how little practical application exercises are designed around it. The **Second-Order Attacks** section content could have probably been rolled into other pre-existing Tier 2 modules that cover the respective XSS, LFI, and Command Injection attacks in greater detail. While I did learn some things from the module, it was ultimately a bit disappointing considering its pricepoint. This module felt like a kind of dumping ground for sections that wouldn't otherwise fit anywhere else (with the notable exception of the **Second-Order Attacks**, which feels included only to give the section more material to work with).
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/modern-web-exploit.md %}
+</details>
+</div>
+
+## Introduction to Deserialization Attacks
+
