New post: ALFA card setup

--- a/_posts/2024/2024-02-05-htb-tier-3.md
+++ b/_posts/2024/2024-02-05-htb-tier-3.md
@@ -176,3 +176,27 @@ From the onset, this looked like a really long module, with 3 sections containin
 
 ## Introduction to Deserialization Attacks
 
+I really liked this section. It covers the premise of deserialization attacks in not 1 but 2 different implementations (`PHP` and `Python`) as well as including a more robust remediation section (vs. a tagged-on single subsection at the end of the module, which is the case for most offensively-oriented modules in the Academy). I wasn't keenly familiar with deserialization attacks from the onset, but I felt like the module was really well crafted and covered the highlights of the vulnerability class quite well. While there were many exercises throughout the module, their were a handful of topics that I felt deliberately did not include an exercise (e.g. `JSONpickle`) which I presumed were reserved for either the exam. The path does feature a follow-up `Advanced Deserialization Attacks` module that's meant to be covered after this one.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/intro-deserialize.md %}
+</details>
+</div>
+
+## Whitebox Attacks
+
+This was an extraordinary section that I felt lived up to its Tier in difficulty and value. The module looks at `prototype pollution`, `timing attacks & race conditions`, and `type juggling` vulnerabilities, with plenty of exercises devoted to each. I found it took me quite a bit of time to ingest/learn this module's content; there were a number of subsections that I spent several hours on working through. The "Whitebox" portion of this module is subtle; it's easy to more narrowly focus on the vulnerabilities and less on the practice of performing a source-code assessment. But I urge students engaging this module to slow down and actually read through the code, if only to develop a good habit. 
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/dropdown-whitebox-attacks.md %}
+</details>
+</div>
+
+## Advanced SQL Injections
+
