--- a/_posts/2024/2024-02-05-htb-tier-3.md
+++ b/_posts/2024/2024-02-05-htb-tier-3.md
@@ -200,3 +200,14 @@ This was an extraordinary section that I felt lived up to its Tier in difficulty
 
 ## Advanced SQL Injections
 
+This was a really good, but really frustrating section. Like many other sections in this training path, the emphasis for this module was on Whitebox code analysis; the SQL injection was merely a vehicle for engaging such analysis, introducing some nuances unique to PostgreSQL (vs. MSSQL, MySQL, or NoSQL injection - covered in their corresponding modules, respectively). While the training was good, I found that there were certain logistical issues that impeded the training - [including one instance where the source code was incorrect in a really important way](https://discord.com/channels/473760315293696010/1236757191676002384/1236757191676002384), ambiguous instructions for setting up dynamic analysis, and a frustrating lack of support in configuring our test environments for using downgraded versions of PostgreSQL; all of these issues felt less deliberate in their training value and more like oversights that could be readily fixed. If you move past those issues however, you'll find a module that is chock-full of engaging content and worthwhile lessons on the subject matter, including some useful python scripts to add to your toolbox.
+
+<hr>
+<div class="custom-dropdown">
+<details markdown=block>
+<summary markdown=span>Module Details</summary>
+{% include_relative helpers/advanced-sql.md %}
+</details>
+</div>
+
+## Advanced Deserialization Attacks
